# c100-ejercicios

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists_simple.txt  CONTRIBUTING.md  DOCKER_README.md  Dockerfile  LICENSE  README.md  SUPPORT.md  docker-compose.yml  package-lock.json
.devcontainer/: README.md  devcontainer.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
00-plantilla/: .gitignore  CMakeLists.txt  INSTRUCCIONES.md  README.md  crear_ejercicio.sh
00-plantilla/ejemplos/: .gitkeep
00-plantilla/include/: nombre_ejercicio.h
00-plantilla/src/: main.c  nombre_ejercicio.c
00-plantilla/tests/: .gitkeep
00-plantilla/tools/: .gitkeep
01-fundamentos-c/001-hola-mundo/: .gitignore  CMakeLists.txt  README.md
01-fundamentos-c/002-suma-dos-numeros/: .gitignore  CMakeLists.txt  README.md
01-fundamentos-c/003-conversion-temperatura/: .gitignore  CMakeLists.txt  README.md
01-fundamentos-c/003-conversion-temperatura/src/: main.c
01-fundamentos-c/004-area-circulo/: .gitignore  CMakeLists.txt  README.md
01-fundamentos-c/004-area-circulo/src/: main.c
01-fundamentos-c/005-formato-tiempo/: .gitignore  CMakeLists.txt  README.md
01-fundamentos-c/005-formato-tiempo/src/: main.c
01-fundamentos-c/006-codigo-ascii/: .gitignore  CMakeLists.txt  README.md
01-fundamentos-c/006-codigo-ascii/src/: main.c
01-fundamentos-c/007-distancia-euclidiana/: .gitignore  CMakeLists.txt  README.md
01-fundamentos-c/007-distancia-euclidiana/src/: main.c
01-fundamentos-c/008-promedio-tres-numeros/: .gitignore  CMakeLists.txt  README.md
01-fundamentos-c/008-promedio-tres-numeros/src/: main.c
01-fundamentos-c/009-intercambio-variables/: .gitignore  CMakeLists.txt  README.md
01-fundamentos-c/010-volumen-esfera/: .gitignore  CMakeLists.txt  README.md
01-fundamentos-c/010-volumen-esfera/src/: main.c
02-control-de-flujo/011-par-impar/: .gitignore  CMakeLists.txt  README.md
02-control-de-flujo/011-par-impar/src/: main.c
02-control-de-flujo/012-maximo-dos/: .gitignore  CMakeLists.txt  README.md
02-control-de-flujo/012-maximo-dos/src/: main.c
02-control-de-flujo/013-clasificacion-numerica/: .gitignore  README.md  (+1 more)
02-control-de-flujo/014-mayor-tres-numeros/: .gitignore  CMakeLists.txt  README.md
02-control-de-flujo/014-mayor-tres-numeros/src/: main.c
02-control-de-flujo/015-calculadora-basica/: .gitignore  CMakeLists.txt  README.md
02-control-de-flujo/015-calculadora-basica/src/: main.c
02-control-de-flujo/017-suma-digitos/: .gitignore  CMakeLists.txt  README.md
02-control-de-flujo/017-suma-digitos/src/: main.c
02-control-de-flujo/019-triangulo-asteriscos/: .gitignore  CMakeLists.txt  README.md
02-control-de-flujo/019-triangulo-asteriscos/src/: main.c
02-control-de-flujo/020-numeros-primos-N/: .gitignore  CMakeLists.txt  README.md
02-control-de-flujo/020-numeros-primos-N/src/: main.c
03-funciones-modularidad/021-funcion-maximo-dos/: .gitignore  CMakeLists.txt  README.md
03-funciones-modularidad/021-funcion-maximo-dos/src/: main.c
03-funciones-modularidad/022-factorial-recursivo/: .gitignore  CMakeLists.txt  README.md
03-funciones-modularidad/022-factorial-recursivo/include/: .gitkeep
03-funciones-modularidad/022-factorial-recursivo/src/: main.c
03-funciones-modularidad/023-funcion-esprimo/: .gitignore  CMakeLists.txt  README.md
03-funciones-modularidad/023-funcion-esprimo/src/: main.c
03-funciones-modularidad/024-funcion-mcd/: .gitignore  CMakeLists.txt  README.md
03-funciones-modularidad/024-funcion-mcd/include/: .gitkeep
03-funciones-modularidad/024-funcion-mcd/src/: main.c
04-operaciones-nivel-bit/028-potencia-2-bits/: CMakeLists.txt  README.md
04-operaciones-nivel-bit/028-potencia-2-bits/src/: main.c
04-operaciones-nivel-bit/029-intercambio-xor/: .gitignore  CMakeLists.txt  README.md
04-operaciones-nivel-bit/029-intercambio-xor/src/: main.c
04-operaciones-nivel-bit/030-empaquetar-bytes/: .gitignore  CMakeLists.txt  README.md
04-operaciones-nivel-bit/030-empaquetar-bytes/include/: .gitkeep
04-operaciones-nivel-bit/030-empaquetar-bytes/src/: main.c
05-vectores-cadenas-caracteres/031-invertir-array/: .gitignore  CMakeLists.txt  README.md
05-vectores-cadenas-caracteres/031-invertir-array/include/: .gitkeep
05-vectores-cadenas-caracteres/031-invertir-array/src/: main.c
05-vectores-cadenas-caracteres/032-suma-promedio-array/: .gitignore  CMakeLists.txt  README.md
05-vectores-cadenas-caracteres/032-suma-promedio-array/include/: .gitkeep
05-vectores-cadenas-caracteres/032-suma-promedio-array/src/: main.c
05-vectores-cadenas-caracteres/033-minimo-maximo-array/: .gitignore  CMakeLists.txt  README.md
05-vectores-cadenas-caracteres/033-minimo-maximo-array/include/: .gitkeep
05-vectores-cadenas-caracteres/033-minimo-maximo-array/src/: main.c
05-vectores-cadenas-caracteres/034-busqueda-lineal/: .gitignore  CMakeLists.txt  README.md
05-vectores-cadenas-caracteres/034-busqueda-lineal/include/: .gitkeep
05-vectores-cadenas-caracteres/034-busqueda-lineal/src/: main.c
05-vectores-cadenas-caracteres/035-ordenar-array-burbuja/: .gitignore  CMakeLists.txt  README.md
05-vectores-cadenas-caracteres/035-ordenar-array-burbuja/include/: .gitkeep
05-vectores-cadenas-caracteres/035-ordenar-array-burbuja/src/: main.c
05-vectores-cadenas-caracteres/036-suma-matrices/: .gitignore  CMakeLists.txt  README.md
05-vectores-cadenas-caracteres/036-suma-matrices/include/: .gitkeep
05-vectores-cadenas-caracteres/036-suma-matrices/src/: main.c
05-vectores-cadenas-caracteres/038-longitud-cadena/: CMakeLists.txt  README.md
05-vectores-cadenas-caracteres/038-longitud-cadena/include/: .gitkeep
05-vectores-cadenas-caracteres/038-longitud-cadena/src/: main.c
05-vectores-cadenas-caracteres/039-contar-vocales/: .gitignore  CMakeLists.txt  README.md
05-vectores-cadenas-caracteres/039-contar-vocales/include/: .gitkeep
05-vectores-cadenas-caracteres/039-contar-vocales/src/: main.c
tools/: README.md  clean_all.sh  docker_build.sh  docker_test_runner.sh  fix_readme.sh  prueba_everything_fresh.sh  quick_test.sh
(+426 files in other folders)
